Added / improved signup / signin endpoints, and improved things here and there
