# apps/users/.apim/swagger.yaml
@@ -1,102 +1,132 @@
 openapi: "3.0.3"
 info:
-  title: "Innovation Service - Users API"
-  version: "1.0.0"
+  title: NHS Innovation Service API - Users module
+  version: 1.0.0
 servers:
-  - url: 'https://nhse-${ENV}-innovation-service-user-functions.azurewebsites.net/api'
-
+- url: https://nhse-${ENV}-innovation-service-user-functions.azurewebsites.net/api
 paths:
-  "/v1/survey":
-    post:
-      tags:
-        - "v1"
-        - "Survey"
-      description: "Creates a Survey object with answers"
-      operationId: "v1-survey-create"
-      responses:
-        "201":
-          description: "Created"
-        "400":
-          description: "Bad Request"
-        "401":
-          description: "Unauthorized"
-        "422":
-          description: "Unprocessable Entity"
-          
   "/v1/me":
     get:
-      tags:
-        - "v1"
-        - "Users"
-      description: "Retrieves the user profile information"
-      operationId: "v1-me-info"
-      parameters:
-        - name: Authorization
-          in: header
-          schema:
-            type: string
-          required: true
+      parameters: []
       responses:
-        "200":
-          description: "Ok"
-        "401":
-          description: "Unauthorized"
-        "404":
-          description: "Not Found"
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: string
+                    description: Unique identifier for the game
+                  state:
+                    type: string
+                    description: The status of the game
+                    enum:
+                    - WaitingForPlayers
+                    - Started
+                    - Complete
+        '404':
+          description: Unable to find a game with that id
     put:
+      summary: Update user information
+      description: Update user information
+      operationId: v1-me-update
       tags:
-        - "v1"
-        - "Users"
-      description: "User profile information update"
-      operationId: "v1-me-update"
-      parameters:
-        - name: Authorization
-          in: header
-          schema:
-            type: string
-          required: true
+      - v1
+      parameters: []
+      requestBody:
+        description: Update user information
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                displayName:
+                  type: string
+                  description: The display name of the user
+                  example: John Doe
+                mobilePhone:
+                  type: string
+                  description: The mobile phone number of the user
+                  example: '07777777777'
+                organisation:
+                  type: object
+                  properties:
+                    id:
+                      type: string
+                      description: The ID of the organisation
+                      example: 12345678-1234-1234-1234-123456789012
+                    name:
+                      type: string
+                      description: The name of the organisation
+                      example: Example Organisation
+                    isShadow:
+                      type: boolean
+                      description: Whether the organisation is a shadow organisation
+                      example: false
+                    size:
+                      type: string
+                      description: The size of the organisation
+                      example: small
       responses:
-        "200":
-          description: "Ok"
-        "400":
-          description: "Bad Request"
-        "401":
-          description: "Unauthorized"
-    post:
-      tags:
-        - "v1"
-        - "Users"
-      description: "Creates the user profile"
-      operationId: "v1-me-create"
-      parameters:
-        - name: Authorization
-          in: header
-          schema:
-            type: string
-          required: true
-      responses:
-        "201":
-          description: "Created"
-        "400":
-          description: "Bad Request"
-        "401":
-          description: "Unauthorized"
-
-  "/v1/organisations":
+        '200':
+          description: User information updated
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: string
+        '400':
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: string
+                  message:
+                    type: string
+  "/v1/me/terms-of-use":
     get:
-      tags:
-        - "v1"
-        - "Organisations"
-      description: "Retrieves organisations list"
-      operationId: "v1-organisations-list"
-      parameters:
-        - name: Authorization
-          in: header
-          schema:
-            type: string
-          required: true
+      parameters: []
       responses:
-        "200":
-          description: "Ok"
-        "401":
-          description: "Unauthorized"
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: string
+                    description: Unique identifier for the game
+                  state:
+                    type: string
+                    description: The status of the game
+                    enum:
+                    - WaitingForPlayers
+                    - Started
+                    - Complete
+        '404':
+          description: Unable to find a game with that id
+  "/v1/survey":
+    post:
+      parameters: []
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: string
+                    description: Unique identifier for survey object
+        '400':
+          description: Invalida survey payload
