# apps/users/v1-me-update/validation.schemas.ts
@@ -1,8 +1,8 @@
-import * as Joi from 'joi';
+import Joi from 'joi';
 
 
 export type AccessorBodyType = {
-  displayName: string;
+  displayName: string
 }
 
 export const AccessorBodySchema = Joi.object<AccessorBodyType>({
@@ -11,19 +11,19 @@ export const AccessorBodySchema = Joi.object<AccessorBodyType>({
 
 
 export type InnovatorBodyType = {
-  displayName: string;
-  mobilePhone?: string;
+  displayName: string,
+  mobilePhone?: null | string,
   organisation: {
-    id: string;
-    isShadow: boolean;
-    name?: string;
-    size?: string;
+    id: string,
+    isShadow: boolean,
+    name?: null | string,
+    size?: null | string
   };
 }
 
 export const InnovatorBodySchema = Joi.object<InnovatorBodyType>({
   displayName: Joi.string().required(),
-  mobilePhone: Joi.string(),
+  mobilePhone: Joi.string().optional().valid(null),
   organisation: Joi.object<InnovatorBodyType['organisation']>({
     id: Joi.string().guid().required(),
     isShadow: Joi.boolean().strict().required(),
